src/KDSM/ContentBundle/Resources/public/css/main.css
body {
    padding: 0;
    margin: 0;
    background: rgba(226, 226, 226, 0.6);
    font-family: Open Sans !important;
    font-weight: 400;
    color: #222;
    font-size: 14px;
    background-image: url('../images/background2.jpg');
    background-repeat: no-repeat;
    background-position: top right;
    background-color: #333;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/background1.jpg',sizingMethod='scale')";
    position: absolute;
    background-attachment: fixed;
    top: 0;
    left: 0;
    bottom:0;
    right:0;
    height: 100%;
    width: 100%;
    z-index: 0;
}

header {
    background: rgba(0, 0, 0, 0.6);
    height: 8em;
}

.black-bg {
    background: rgba(0, 0, 0, 0.7);
    border: 1px solid black;
}

.logo {
    margin-top:20px;
}

.result-page {
    margin-top:10%;
}

.content-heading {
    background: #157C3E;
    padding: 0em 1em;
    color: white;
    margin: 1em 0 0 0;
    text-align: center;
}

table {
    background: rgba(0, 0, 0, 0.9) !important;
    color:white;
}

table td {
    border-color: #222222 !important;
}

/* Login Form */
.login-form,
.register-form{
    float: none;
    margin: 2em auto;
    padding-bottom: 1em;
    background-color: rgba(0, 0, 0, 0.6);
    -o-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
    -ms-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
}

.login-form h2,
.register-form h2{
    font-family: 'Roboto', 'PT Sans', sans-serif;
    font-size: 1.8em;
    padding-top: 20px;
    padding-bottom: 10px;
    color: white;
    text-align: center;
    border-bottom: 1px solid #CACACA;
}

.login-form input.field {
    display: block;
    padding: 0.7em 1em;
    margin: 1em auto;
}

#fos_user_registration_form > div {
    margin: 1em 0;
}

.register-form label {
    color:white;
    font-weight: 300;
    display: inline-block;
    width: 35%;
}

.register-form input[type=text],
.register-form input[type=email],
.register-form input[type=number],
.register-form input[type=password] {
    padding: 0.2em 0.4em;
    width: 60%;
}

.login-form label.remember-me-label {
    font-weight: 400;
    color: #95a5a6;
    display: inline-block;
    margin-top: 6px;
}

.login-form input[type=checkbox] {
    height: 1.5em;
    width: 1.5em;
    float: left;
    margin: 5px;
}

.login-form input[type=checkbox]:before{
    width: 20px;
    height: 20px;
}

.login-form input[type=checkbox]:after {
    top: -20px;
    width: 16px;
    height: 16px;
}

.login-form input[type=submit],
.register-form input[type=submit] {
    background-color: #F48E2B;
    border: none;
    padding: 0.5em 2em;
    color: white;
    border-color: #CB6E13;
    display: block;
    margin: 0 auto;
}

/* Sidebar */
.sidebar {
    height: 100%;
    background: #212121;
    position:fixed;
    top:0;
}

.sidebar.left {
    left: 0;
}

.sidebar.right {
    display: none;
    right: 0px;
    padding:0px;
}

.search-box {
    padding: 10px 10px;
    position: relative;
    margin: 0 auto;
    width: 100%;
    height: 7%;
}

.search-box i.search-users-icon {
    position: absolute;
    top: 18px;
    left: 17px;
    color: #BABABA;
    font-weight: normal;
    font-size: 12px;
}

.search-box input#search-users {
    height: 27px;
    width: 100%;
    border: 1px solid #BABABA;
    padding: 0 0 0 26px;
    font-size: 12px;
    line-height: 28px;
    font-family: Open Sans;
    -webkit-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    -moz-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    -ms-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    -o-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
}

.search-box input#search-users:focus {
    outline: none;
    border-color: #66b1ee;
    -webkit-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    -moz-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    -ms-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    -o-box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
    box-shadow: 0 0 2px rgba(85, 168, 236, 0.9);
}

.sidebar .found-users {
    height: 63%;
    margin: 5px 1px;
}

.sidebar.right ul {
    padding:0;
    margin:0;
    list-style:none;
    color: white !important;
}

.sidebar.right ul li {
    border-bottom: 1px solid #2f2f2f;
    padding: 7px 0px;
    font-size: 0.8em;
    text-indent: 40px;
}

.sidebar.right ul li.ui-state-focus,
.sidebar.right ul li:hover {
    background: #4CAF50 !important;
    border-left: 3px solid #4CAF50;
    color: white;
    border: 1px solid #266929;
}

.sidebar.right ul.log-list li:hover {
    background-color: rgba(150, 33, 44, 0.8) !important;
    border-color: rgba(150, 33, 44, 0.8) !important;
    cursor: pointer;
}

.sidebar .selected-users {
    margin-top: 0.5em;
    height: 100%;
}

.sidebar .selected-users h5 {
    font-size: 14px;
    font-weight: bold;
    color: white;
    font-style: italic;
    padding: 4px 0px;
    border-bottom: 1px solid #CACACA;
    text-align: center;
}

.sidebar .selected-users #log {
    height: 30%;
    width: 100%;
    overflow: hidden;
}

#save-queue-element {
    width: 90%;
    margin: 0 5%;
}

.user-info {
    height: 25%;
}

.user-info > img {
    max-width: 60%;
    max-height: 60%;
    margin: 5% auto;
    display: block;
    -webkit-box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
    -moz-box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
    -ms-box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
    -o-box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
    box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
    border-radius: 50%;
}

.user-info span.user-name {
    display: block;
    height:10%;
    color:white;
    font-size: 1.2em;
    font-family: Open Sans !important;
    font-weight: 400;
}

.notifications-icon{
    display: block;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background: #4CAF50;
    position: absolute;
    left: 60%;
    text-align: center;
    line-height: 35px;
    font-size: 1.4em;
    color: white;
    top: 1%;
    cursor: pointer;
}

.queue-up{
    display: block;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background: red;
    position: absolute;
    left: 60%;
    text-align: center;
    line-height: 35px;
    font-size: 1.4em;
    color: white;
    top: 12%;
    cursor: pointer;
}

.sidebar-nav {

}

.sidebar-nav ul {

}

.sidebar-nav ul li {
    padding: 3% 0;
    -webkit-transition: all .2s ease-in-out;
    -moz-transition: all .2s ease-in-out;
    -ms-transition: all .2s ease-in-out;
    -o-transition: all .2s ease-in-out;
    transition: all .2s ease-in-out;
}

.sidebar-nav ul li a {
    text-align: center;
    color: #757575;
}

.sidebar-nav ul li a i {
    font-size: 2.5em;
    display: block;
    font-family: FontAwesome;
    padding: 3% 0;
}

.sidebar-nav ul li a span {
    font-size: 1.2em;
    font-family: Open Sans !important;
    font-weight: 300;
}

.sidebar-nav ul li:hover,
.sidebar-nav ul li.active {
    background: #121212 !important;
    border-left: 3px solid #4CAF50;
}

.sidebar-nav ul li:hover a,
.sidebar-nav ul li.active a {
    color: #fff;
    background: #121212 !important;
}

/* Main page content */
.main-content {
    position: relative;
    margin: 0 auto;
    float: none;
    padding: 0 30px;
    margin-bottom: 4em;
}
/* Logged homepage*/

.table-free {
    padding: 1em 1em;
    margin: 1em 0 1em 0;
}

.table-free p {
    color: white;
    font-size:18px;
}

.table-free button {

}

.result-box {
    height: 50%;
    display: block;
    overflow: hidden;
    text-align: center;
    margin: 5% 0;
    padding: 1em 1em;

}

.result-box span.result {
    font-size: 5.4em;
    font-family: Open Sans !important;
    font-weight: 400;
    font-style: italic;
    color: #4CAF50;
}

.result-box span.separator {
    padding:0 5%;
}

.user-photo {
    width: 50.5%;
    border: 1px solid #BABABA;
    padding: 2%;
    background: white;
}

/* Tables */
table {
    background: white;
}

table th {
    background: #4CAF50;
    border: none !important;
    color: white;
    font-family: Open Sans !important;
    font-size: 16px;
    font-weight: 300;
    text-align: center;
}

/* Queue style */
.queue-game {
    color: white;
    display: block;
    overflow: hidden;
    text-align: center;
    margin: 1.5% 0;
    background: rgba(0, 0, 0, 0.7);
    padding: 0em 0em 0em 0.5em;
    border: 1px solid black;
}

.queue-element-users {
    padding: 0 0.6em;
}

.queue-game .player-photo,
.queue-game .user-response
{
    background: rgba(0, 0, 0, 0.3);
    padding:1px;
    border-radius: 100%;
    -moz-border-radius: 100%;
    -webkit-border-radius: 100%;
    -o-border-radius: 100%;
    -ms-border-radius: 100%;
}

.queue-game .user-response div {
    margin: 0;
    cursor: pointer;
    position: relative;
}

.queue-game .user-response div i {
    font-size: 1em;
    padding: 0.3em 0;
}
.queue-game .user-response label {
    font-weight: 300;
}

.queue-game .user-response .accept-invitation {
    background: rgba(66, 160, 46, 0.9);
}

.queue-game .user-response .decline-invitation
{
    background: rgba(215, 23, 23, 0.9);
}

.queue-game .player-name {
    padding: 1em 0em;
}

.queue-game.creatingGame {
    background: rgba(92, 184, 92, 0.8);
    border: 1px solid #4cae4c;
}

.queue-game.gameMember {
    background: rgba(244, 142, 43, 0.81);
    border: 1px solid #F48E2B;
}

.queue-element-info {
    border-top: 1px solid #BABABA;
    background: rgba(81, 74, 74, 0.8);
}

.queue-element-info .action {
    display: block;
    cursor: pointer;
    position:relative;
    text-align: center;
    padding: 0;
}
.queue-element-info .action:hover {
    background: #157C3E;
}


.btn-add-to-queue {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
}

/* Notifications part*/
.cancel_button{
    width: 25px;
    height: 25px;
    position: relative;
    left: 25%;

}

.notification{

}

